Header Navigation: fix dropdown alignment

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -61,6 +61,7 @@ a.sidebar-link.active
       border 1px solid #000
       border-radius 16px
       box-shadow 3px 4px 0px #000
+      right unset
 
       .dropdown-item
         padding 0 32px
